--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="https://fonts.googleapis.com/css?family=Lato:400,700,700i,900,900i&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Natours</title>
   </head>
   <body>
