--- a/index.html
+++ b/index.html
@@ -26,10 +26,32 @@
     </header>
     <main>
       <section class="section-about">
-        <div class="u-center-text">
+        <div class="u-center-text u-margin-bottom-8">
           <h2 class="heading-secondary">
             Exciting tours for adventurios people
           </h2>
+        </div>
+        <div class="row">
+          <div class="col-1-of-2">
+            <h3 class="heading-tertiary u-margin-bottom-2">
+              You're going to fall in love with nature
+            </h3>
+            <p class="paragraph">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos
+              quaerat animi architecto sed odit molestiae velit fuga libero,
+              labore cum repellendus numquam laborum deleniti obcaecati soluta.
+              Vitae vero eaque voluptatibus.
+            </p>
+            <h3 class="heading-tertiary u-margin-bottom-2">
+              Love adventures like you never have before
+            </h3>
+            <p class="paragraph">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos
+              quaerat animi.
+            </p>
+            <a href="#" class="btn-text">Lern more &rarr;</a>
+          </div>
+          <div class="col-1-of-2">Image composition</div>
         </div>
       </section>
     </main>
