start tour section

--- a/index.html
+++ b/index.html
@@ -19,23 +19,23 @@
       </div>
       <div class="header__text-box">
         <h1 class="heading-primary">
-          <span class="heading-primary--main">Outdoors</span>
-          <span class="heading-primary--sub">is where live happen</span>
+          <span class="heading-primary--main">Природа</span>
+          <span class="heading-primary--sub">это место где живет счастье</span>
         </h1>
-        <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
+        <a href="#" class="btn btn--white btn--animated">Открой наши туры</a>
       </div>
     </header>
     <main>
       <section class="section-about">
         <div class="u-center-text u-margin-bottom-8">
           <h2 class="heading-secondary">
-            Exciting tours for adventurios people
+            Захватывающие туры для авантюрных людей
           </h2>
         </div>
         <div class="row">
           <div class="col-1-of-2">
             <h3 class="heading-tertiary u-margin-bottom-2">
-              You're going to fall in love with nature
+              Ты влюбишься в природу
             </h3>
             <p class="paragraph">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos
@@ -44,13 +44,13 @@
               Vitae vero eaque voluptatibus.
             </p>
             <h3 class="heading-tertiary u-margin-bottom-2">
-              Love adventures like you never have before
+              Люби приключения как никогда до этого
             </h3>
             <p class="paragraph">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos
               quaerat animi.
             </p>
-            <a href="#" class="btn-text">Lern more &rarr;</a>
+            <a href="#" class="btn-text">Изучить больше&rarr;</a>
           </div>
           <div class="col-1-of-2">
             <div class="composition">
@@ -82,7 +82,7 @@
               <div class="feature-box">
                   <i class="feature-box__icon icon-basic-world"></i>
                   <h3 class="heading-tertiary u-margin-bottom-2">
-                    Explore the world
+                    Исследуй мир
                   </h3>
                   <p class="feature-box__text">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
@@ -101,7 +101,7 @@
               <div class="feature-box">
                   <i class="feature-box__icon icon-basic-compass"></i>
                   <h3 class="heading-tertiary u-margin-bottom-2">
-                    Meet nature
+                  Познакомься с природой
                   </h3>
                   <p class="feature-box__text">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
@@ -121,7 +121,7 @@
               <div class="feature-box">
                   <i class="feature-box__icon icon-basic-map"></i>
                   <h3 class="heading-tertiary u-margin-bottom-2">
-                    Find your way
+                    Найди свой путь
                   </h3>
                   <p class="feature-box__text">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
@@ -142,7 +142,7 @@
               <div class="feature-box">
                   <i class="feature-box__icon icon-basic-heart"></i>
                   <h3 class="heading-tertiary u-margin-bottom-2">
-                    Live a helthier life
+                    Живи здоровую жизнь
                   </h3>
                   <p class="feature-box__text">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
@@ -163,6 +163,21 @@
           
         </div>
       </section>
+
+<section class="section-tours">
+  <div class="u-center-text u-margin-bottom-8">
+<h2 class="heading-secondary">
+  Наиболее популярные туры
+</h2>
+  </div>
+<div class="row">
+  <div class="col-1-of-3">
+    Some text
+  </div>
+</div>
+</section>
+
+
     </main>
     <!-- <section class="grid-test">
       <div class="row">
