create first card for tours

--- a/index.html
+++ b/index.html
@@ -164,18 +164,46 @@
         </div>
       </section>
 
-<section class="section-tours">
-  <div class="u-center-text u-margin-bottom-8">
-<h2 class="heading-secondary">
-  Наиболее популярные туры
-</h2>
-  </div>
-<div class="row">
-  <div class="col-1-of-3">
-    Some text
-  </div>
-</div>
-</section>
+      <section class="section-tours">
+        <div class="u-center-text u-margin-bottom-8">
+      <h2 class="heading-secondary">
+        Наиболее популярные туры
+      </h2>
+        </div>
+      <div class="row">
+        <div class="col-1-of-3">
+          <div class="card">
+            <div class="card__side card__side--front">
+              <div class="card__picture card__picture--1">
+                &nbsp;
+              </div>
+              <div class="card__heading">
+                <span class="card__heading-span--1">Туры на море</span>
+                
+              </div>
+              <div class="card__details">
+                <ul>
+                  <li>3-х дневный тур</li>
+                  <li>До 30-ти человек</li>
+                  <li>Ночевка в оттелях</li>
+                  <li>Сложность: легкий</li>
+                  <li></li>
+                </ul>
+              </div>
+            </div>
+            <div class="card__side card__side--back card__side--back-1">
+              BACK
+            </div>
+          </div>
+        </div>
+        <div class="col-1-of-3">
+          Some text
+        </div>
+        <div class="col-1-of-3">
+          Some text
+        </div>
+      </div>
+      </section>
 
 
     </main>
